tests/ui/splat/splat-invalid.stderr
error: multiple `#[splat]`s are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:7:22
   |
LL | fn multisplat_fn_bad(#[splat] (_a, _b): (u32, i8), #[splat] (_c, _d): (u32, i8)) {}
   |                      ^^^^^^^^                      ^^^^^^^^
   |
   = help: remove `#[splat]` from all but one argument

error: multiple `#[splat]`s are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:19:5
   |
LL |     #[splat]
   |     ^^^^^^^^
LL |
LL |     #[splat]
   |     ^^^^^^^^
...
LL |     #[splat] (_c, _d): (u32, i8),
   |     ^^^^^^^^
   |
   = help: remove `#[splat]` from all but one argument

error: `...` and `#[splat]` are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:28:37
   |
LL | unsafe extern "C" fn splat_variadic(#[splat] (_a, _b): (u32, i8), varargs: ...) {}
   |                                     ^^^^^^^^                      ^^^^^^^^^^^^
   |
   = help: remove `#[splat]` or remove `...`

error: `...` must be the last argument of a C-variadic function
  --> $DIR/splat-invalid.rs:31:38
   |
LL | unsafe extern "C" fn splat_variadic2(varargs: ..., #[splat] (_a, _b): (u32, i8)) {}
   |                                      ^^^^^^^^^^^^

error: `...` and `#[splat]` are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:31:38
   |
LL | unsafe extern "C" fn splat_variadic2(varargs: ..., #[splat] (_a, _b): (u32, i8)) {}
   |                                      ^^^^^^^^^^^^  ^^^^^^^^
   |
   = help: remove `#[splat]` or remove `...`

error: incorrect function inside `extern` block
  --> $DIR/splat-invalid.rs:36:8
   |
LL | extern "C" {
   | ---------- `extern` blocks define existing foreign functions and functions inside of them cannot have a body
LL |     fn splat_variadic3(#[splat] (_a, _b): (u32, i8), ...) {}
   |        ^^^^^^^^^^^^^^^ cannot have a body                 -- help: remove the invalid body: `;`
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: `...` and `#[splat]` are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:36:24
   |
LL |     fn splat_variadic3(#[splat] (_a, _b): (u32, i8), ...) {}
   |                        ^^^^^^^^                      ^^^
   |
   = help: remove `#[splat]` or remove `...`

error: incorrect function inside `extern` block
  --> $DIR/splat-invalid.rs:40:8
   |
LL | extern "C" {
   | ---------- `extern` blocks define existing foreign functions and functions inside of them cannot have a body
...
LL |     fn splat_variadic4(..., #[splat] (_a, _b): (u32, i8)) {}
   |        ^^^^^^^^^^^^^^^ cannot have a body                 -- help: remove the invalid body: `;`
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: `...` must be the last argument of a C-variadic function
  --> $DIR/splat-invalid.rs:40:24
   |
LL |     fn splat_variadic4(..., #[splat] (_a, _b): (u32, i8)) {}
   |                        ^^^

error: `...` and `#[splat]` are not allowed in the same function argument list
  --> $DIR/splat-invalid.rs:40:24
   |
LL |     fn splat_variadic4(..., #[splat] (_a, _b): (u32, i8)) {}
   |                        ^^^  ^^^^^^^^
   |
   = help: remove `#[splat]` or remove `...`

error: multiple `splat` attributes
  --> $DIR/splat-invalid.rs:12:5
   |
LL |     #[splat]
   |     ^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/splat-invalid.rs:11:5
   |
LL |     #[splat]
   |     ^^^^^^^^

error: multiple `splat` attributes
  --> $DIR/splat-invalid.rs:21:5
   |
LL |     #[splat]
   |     ^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/splat-invalid.rs:19:5
   |
LL |     #[splat]
   |     ^^^^^^^^

error[E0053]: method `has_splat` has an incompatible type for trait
  --> $DIR/splat-invalid.rs:60:5
   |
LL |     fn has_splat(_: ()) {}
   |     ^^^^^^^^^^^^^^^^^^^ expected fn with arg 0 splatted, found fn with no splatted arg
   |
note: type in trait
  --> $DIR/splat-invalid.rs:52:5
   |
LL |     fn has_splat(#[splat] _: ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn(#[splat] ())`
              found signature `fn(())`

error[E0053]: method `no_splat` has an incompatible type for trait
  --> $DIR/splat-invalid.rs:62:5
   |
LL |     fn no_splat(#[splat] _: (u32, f64)) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected fn with no splatted arg, found fn with arg 0 splatted
   |
note: type in trait
  --> $DIR/splat-invalid.rs:54:5
   |
LL |     fn no_splat(_: (u32, f64));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn((_, _))`
              found signature `fn(#[splat] (_, _))`

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0053`.
